k8s/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: api.mailbook.in.th
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: mailbook-api-cluster-ip-svr
            port:
              number: 18986
  - host: mailbook.in.th
    http:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: mailbook-web-cluster-ip-svr
            port:
              number: 28986
